--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,7 +26,9 @@ jobs:
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Set up Python 3.8.5
       uses: actions/setup-python@v2
       with:
