--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,7 +41,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
     - name: Use local settings
-      run: cp mysite/mysite/local_settings.py.ci mysite/mysite/local_settings.py
+      run: cp mysite/local_settings.py.ci mysite/local_settings.py
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
