--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -59,5 +59,5 @@ jobs:
         if [[ ! -z $DIFF_FILES ]]
         then
           echo "Checking ..." $DIFF_FILES
-          mysite/flake8 --exclude migrations,libraries,.coveragerc,settings.py,*.yml,*.txt,*.html,*.js,*.css,*.ini,*.scss,*.md,mortgage.py,yarn.lock,package.json --ignore=E501,W503 $DIFF_FILES;
+          flake8 --exclude migrations,libraries,.coveragerc,settings.py,*.yml,*.txt,*.html,*.js,*.css,*.ini,*.scss,*.md,mortgage.py,yarn.lock,package.json --ignore=E501,W503 $DIFF_FILES;
         fi
